--- a/app/src/main/res/layout/view_chat_sent_voice.xml
+++ b/app/src/main/res/layout/view_chat_sent_voice.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/style_radius_sent_message"
+        android:backgroundTint="@color/background"
         android:padding="@dimen/large_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
