--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.BranchBots" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_250</item>
+        <item name="colorPrimary">@color/background</item>
         <item name="colorPrimaryVariant">@color/purple_750</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
